# ultimate-cookiecutter-by-alecrim

./: bash_script.sh  cookiecutter.json  local_extensions.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_dir}}/: .env  pyproject.toml
{{cookiecutter.project_dir}}/config/: log_config.json
{{cookiecutter.project_dir}}/src/: main.py
